scrollbar fix #2

--- a/frontend/src/Components/Statistics/HorizontalServiceButtons.css
+++ b/frontend/src/Components/Statistics/HorizontalServiceButtons.css
@@ -53,6 +53,8 @@
     overflow-x: scroll;
     margin: 0 auto;
     scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
   }
 
   .service-row {
